--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ant-design/icons": "^6.1.0",
     "@tanstack/react-query": "^5.90.20",
     "antd": "^6.2.3",
     "react": "^19.2.0",
